# yojoartapp

./: .gitignore  Cargo.toml  Dockerfile  README.md  apk  build.sh  manifest.yaml  run
examples/: pc.rs
src/: License.txt  android_native.rs  data_model.rs  delay_assets.rs  gui.rs  lib.rs  load_misskey.rs  unicodeemoji.txt
src/gui/: main_ui.rs  tl.rs  utils.rs
src/include/: License.txt
src/locale/: ja_jp.json
