[package]
name = "yojo_art_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27"
env_logger = { version = "0.11", default-features = false, features = ["auto-color","humantime"] }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.12", default-features = false , features = ["stream","rustls-tls-webpki-roots"] }
chrono = "0.4"
uuid={ version = "1.7.0",features = ["v4","v3"]}
image="0.25"
serde = {version="^1.0.201",features=["derive"]}
serde_json ="1"
urlencoding = "2.1"
webp = "0.3.0"
hex = "0.4.3"
regex = "1.10.4"
flate2 = "1.0.30"
blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm.git", rev = "a81e33c46a10a63f1f0ed25aa48a6e3066d26804" }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe={ version = "0.27",features = ["persistence"]}
egui-winit = { version = "0.27", features = ["clipboard", "links"]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
eframe = { version = "0.27", features = ["wgpu", "persistence", "android-native-activity", "default_fonts"] }
egui-winit = { version = "0.27", features = ["clipboard", "links"]}
jni = "0.21"

[profile.release]
strip=true
opt-level=3
lto=true
panic="unwind"
